--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 #################
 
 *.pydevproject
+.project
 .metadata
 bin/
 tmp/
@@ -11,6 +12,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
+.classpath
 .settings/
 .loadpath
 
