Changed layout to landscape

--- a/Source/workspace/PARROT/AndroidManifest.xml
+++ b/Source/workspace/PARROT/AndroidManifest.xml
@@ -13,14 +13,14 @@
         <activity
             android:name="dk.aau.cs.giraf.parrot.PARROTActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <activity android:name=".SpeechBoardFragment" />
+            
         </activity>
     </application>
 
