--- a/Source/workspace/PARROT/AndroidManifest.xml
+++ b/Source/workspace/PARROT/AndroidManifest.xml
@@ -18,10 +18,12 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                
             </intent-filter>
-
             
         </activity>
+        <activity android:name=".SpeechBoardFragment" />
+        
     </application>
 
 </manifest>
