--- a/Source/workspace/PictoAdmin/AndroidManifest.xml
+++ b/Source/workspace/PictoAdmin/AndroidManifest.xml
@@ -16,7 +16,8 @@
         <activity
             android:name="dk.aau.cs.giraf.pictoadmin.PictoAdminMain"
             android:label="@string/app_name" 
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
