--- a/Source/workspace/PARROT/AndroidManifest.xml
+++ b/Source/workspace/PARROT/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:onClick="finish"
         android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="dk.aau.cs.giraf.parrot.PARROTActivity"
