--- a/source/workspace/CategoryManager/.project
+++ b/source/workspace/CategoryManager/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CategoryManager</name>
+	<name>CategoryLib</name>
 	<comment></comment>
 	<projects>
 	</projects>
