--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -11,4 +11,4 @@
 target=android-13
 android.library.reference.1=..\\AmbilWarna
 android.library.reference.2=..\\OasisLib
-android.library.reference.3=../CategoryManager
+android.library.reference.3=../CategoryLib
