--- a/source/workspace/PictoAdmin/project.properties
+++ b/source/workspace/PictoAdmin/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-13
 android.library.reference.1=..\\OasisLib
+android.library.reference.2=../../../source/workspace/CategoryLib
