Changed layout for PictoAdminMain

--- a/source/workspace/PictoAdmin/gen/.gitignore
+++ b/source/workspace/PictoAdmin/gen/.gitignore
@@ -1,107 +1,6 @@
 /com
 /dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
-/com
-/dk
+/.gitignore
 /com
 /dk
 /com
