--- a/source/workspace/CategoryLib/AndroidManifest.xml
+++ b/source/workspace/CategoryLib/AndroidManifest.xml
@@ -14,4 +14,5 @@
         android:theme="@style/AppTheme" >
     </application>
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest>
