--- a/source/workspace/PARROT/AndroidManifest.xml
+++ b/source/workspace/PARROT/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="13" />
-
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +25,7 @@
             android:name="dk.aau.cs.giraf.parrot.SettingActivity"
             android:label="@string/title_activity_setting" >
         </activity>
+        
     </application>
-
+	
 </manifest>
