--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -12,3 +12,4 @@ target=android-13
 android.library.reference.1=..\\AmbilWarna
 android.library.reference.2=..\\OasisLib
 android.library.reference.3=../CategoryLib
+android.library=false
