fix layout add some tests

--- a/source/workspace/PictoAdmin/gen/.gitignore
+++ b/source/workspace/PictoAdmin/gen/.gitignore
@@ -35,3 +35,214 @@
 /dk
 /com
 /dk
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
