--- a/source/workspace/Wombat/project.properties
+++ b/source/workspace/Wombat/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-13
-android.library.reference.3=../TimerLib
-android.library.reference.1=../wheel
-android.library.reference.2=../AmbilWarna
+android.library.reference.3=..\\TimerLib
+android.library.reference.1=..\\wheel
+android.library.reference.2=..\\AmbilWarna
 android.library.reference.4=../DrawLib
