Tilføjet prøve pictogram som er parcelable

--- a/source/workspace/PictoAdmin/gen/.gitignore
+++ b/source/workspace/PictoAdmin/gen/.gitignore
@@ -246,3 +246,113 @@
 /dk
 /com
 /dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
