--- a/source/workspace/PictoAdmin/gen/.gitignore
+++ b/source/workspace/PictoAdmin/gen/.gitignore
@@ -356,3 +356,75 @@
 /dk
 /com
 /dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
