Changed send function to send long[]

--- a/source/workspace/PictoAdmin/gen/.gitignore
+++ b/source/workspace/PictoAdmin/gen/.gitignore
@@ -428,3 +428,133 @@
 /dk
 /com
 /dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
