Made some nice changes

--- a/source/workspace/PictoAdmin/gen/.gitignore
+++ b/source/workspace/PictoAdmin/gen/.gitignore
@@ -159,3 +159,101 @@
 /dk
 /com
 /dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
+/com
+/dk
