Edit icon feature added

--- a/source/workspace/PictoAdmin/project.properties
+++ b/source/workspace/PictoAdmin/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-13
 android.library.reference.1=..\\OasisLib
-android.library.reference.2=../../../source/workspace/CategoryLib
+android.library.reference.2=..\\..\\..\\source\\workspace\\CategoryLib
+android.library.reference.3=../AmbilWarna
