--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -8,7 +8,7 @@
 # project structure.
 
 # Project target.
-target=android-13
+target=Google Inc.:Google APIs:17
 android.library.reference.1=..\\AmbilWarna
 android.library.reference.2=..\\OasisLib
 android.library.reference.3=../CategoryLib
