--- a/source/workspace/PictoAdmin/project.properties
+++ b/source/workspace/PictoAdmin/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=..\\OasisLib
-android.library.reference.2=..\\..\\..\\source\\workspace\\CategoryLib
+android.library.reference.1=../OasisLib
+android.library.reference.2=../CategoryLib
 android.library.reference.3=../AmbilWarna
