--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -9,7 +9,7 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=..\\AmbilWarna
-android.library.reference.2=..\\OasisLib
+android.library.reference.1=../AmbilWarna
+android.library.reference.2=../OasisLib
 android.library.reference.3=../CategoryLib
 android.library=false
