--- a/source/workspace/PARROT/.classpath
+++ b/source/workspace/PARROT/.classpath
@@ -4,6 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="src" path="/CategoryLib"/>
+	<classpathentry kind="src" path="/AmbilWarna"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OasisLib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Pictogram"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
