--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -8,8 +8,8 @@
 # project structure.
 
 # Project target.
-target=Google Inc.:Google APIs:17
-android.library.reference.1=../AmbilWarna
-android.library.reference.2=../OasisLib
-android.library.reference.3=../CategoryLib
+target=android-13
 android.library=false
+android.library.reference.1=..\\CategoryLib
+android.library.reference.2=..\\OasisLib
+android.library.reference.3=..\\AmbilWarna
