--- a/source/workspace/PictoAdmin/.classpath
+++ b/source/workspace/PictoAdmin/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CategoryLib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Pictogram"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
