--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "source/workspace/OasisLib"]
 	path = source/workspace/OasisLib
 	url = http://Cs-cust06-int.cs.aau.dk/git-ro/oasis-lib
+[submodule "source/workspace/PictogramLib"]
+	path = source/workspace/PictogramLib
+	url = http://Cs-cust06-int.cs.aau.dk/git-ro/pictogram-lib
