--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,4 @@
 [submodule "source/workspace/Ambilwarna"]
 	path = source/workspace/Ambilwarna
 	url = http://cs-cust06-int.cs.aau.dk/git-ro/ambilwarna.git
+	ignore = dirty
