--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -9,7 +9,7 @@
 
 # Project target.
 target=android-13
-android.library.reference.1=../AmbilWarna
-android.library.reference.2=../OasisLib
-android.library.reference.3=../CategoryLib
-android.library=false
+android.library.reference.1=../OasisLib
+android.library.reference.2=../CategoryLib
+android.library.reference.3=../AmbilWarna
+android.library.reference.4=../PictogramLib
