--- a/pictoadmin/project.properties
+++ b/pictoadmin/project.properties
@@ -15,3 +15,4 @@ target=android-13
 android.library.reference.1=../OasisLib
 android.library.reference.2=../CategoryLib
 android.library.reference.3=../AmbilWarna
+android.library.reference.4=../PictogramLib
