--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = source/workspace/PictoAdmin
 	url = http://cs-cust06-int.cs.aau.dk/git-ro/pictoadmin
 	ignore = dirty
+[submodule "source/TimerLib"]
+	path = source/TimerLib
+	url = http://cs-cust06-int.cs.aau.dk/git-ro/timer-lib.git
