Added PictoCreater submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = source/workspace/OasisLib
 	url = http://cs-cust06-int.cs.aau.dk/git-ro/oasis-lib.git
 	ignore = dirty
+[submodule "source/workspace/PictoCreater"]
+	path = source/workspace/PictoCreater
+	url = http://cs-cust06-int.cs.aau.dk/git-ro/pictocreator.git
