--- a/source/workspace/DeveloperPictoadmin/AndroidManifest.xml
+++ b/source/workspace/DeveloperPictoadmin/AndroidManifest.xml
@@ -7,31 +7,37 @@
     <uses-sdk
         android:minSdkVersion="13"
         android:targetSdkVersion="13" />
+	
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="dk.aau.cs.giraf.pictoadmin.AdminCategory"
-            android:label="@string/title_activity_admin_category"
+            android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
             android:name="dk.aau.cs.giraf.pictoadmin.HelpMenu"
             android:label="@string/title_activity_help_menu" >
         </activity>
+        
         <activity
             android:name="dk.aau.cs.giraf.pictoadmin.PictoAdminMain"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_picto_main"
+            android:logo="@drawable/ic_action_search"
             android:screenOrientation="landscape" >
         </activity>
+        
     </application>
-
+    
 </manifest>
