--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -9,7 +9,7 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=..\\CategoryLib
-android.library.reference.2=..\\AmbilWarna
-android.library.reference.3=..\\PictogramLib
-android.library.reference.4=../AlternativeOasis
+android.library.reference.1=..\\AmbilWarna
+android.library.reference.2=..\\PictogramLib
+android.library.reference.3=..\\AlternativeOasis
+android.library.reference.4=../CategoryLib
