--- a/source/workspace/DeveloperPictoadmin/AndroidManifest.xml
+++ b/source/workspace/DeveloperPictoadmin/AndroidManifest.xml
@@ -36,8 +36,28 @@
             android:label="@string/title_activity_picto_main"
             android:logo="@drawable/ic_action_search"
             android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
         </activity>
         
     </application>
+    
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        
+        <activity
+            android:name="dk.aau.cs.giraf.pictosearch.PictoAdminMain"
+            android:label="@string/title_activity_picto_main"
+            android:logo="@drawable/ic_action_search"
+            android:screenOrientation="landscape" >
+            
+        </activity>
+        
+    </application>
+    
     
 </manifest>
