--- a/source/workspace/Cat/AndroidManifest.xml
+++ b/source/workspace/Cat/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.aau.cs.giraf.cat"
+    package="dk.aau.cs.giraf.pictoadmin"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="dk.aau.cs.giraf.cat.AdminCategory"
+            android:name="dk.aau.cs.giraf.pictoadmin.AdminCategory"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
@@ -27,7 +27,7 @@
         </activity>
         
         <activity
-            android:name="dk.aau.cs.giraf.cat.HelpMenu"
+            android:name="dk.aau.cs.giraf.pictoadmin.HelpMenu"
             android:label="@string/title_activity_help_menu" >
         </activity>
     
