--- a/source/workspace/PictoAdmin2/AndroidManifest.xml
+++ b/source/workspace/PictoAdmin2/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dk.aau.cs.giraf.pictoadmin"
+    package="dk.aau.cs.giraf.pictosearch"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="dk.aau.cs.giraf.pictoadmin.PictoAdminMain"
+            android:name="dk.aau.cs.giraf.pictosearch.PictoAdminMain"
             android:label="@string/title_activity_picto_main"
             android:logo="@drawable/ic_action_search"
             android:screenOrientation="landscape" >
@@ -27,7 +27,7 @@
         </activity>
         
         <activity
-            android:name="dk.aau.cs.giraf.pictoadmin.HelpMenu"
+            android:name="dk.aau.cs.giraf.pictosearch.HelpMenu"
             android:label="@string/title_activity_help_menu" >
         </activity>
         
