--- a/source/workspace/Cat/project.properties
+++ b/source/workspace/Cat/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-13
-android.library.reference.1=../../SW6Parrot/source/workspace/Ambilwarna
-android.library.reference.2=../../SW6Parrot/source/workspace/CategoryLib
-android.library.reference.3=../../SW6Parrot/source/workspace/AlternativeOasis
-android.library.reference.4=../../SW6Parrot/source/workspace/PictogramLib
+android.library.reference.1=../Ambilwarna
+android.library.reference.2=../CategoryLib
+android.library.reference.3=../AlternativeOasis
+android.library.reference.4=../PictogramLib
