--- a/source/workspace/PictoAdmin2/.project
+++ b/source/workspace/PictoAdmin2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name> PictoAdmin2</name>
+	<name>PictoSearch</name>
 	<comment></comment>
 	<projects>
 	</projects>
