--- a/category-lib/project.properties
+++ b/category-lib/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=android-13
 android.library=true
-android.library.reference.1=../OasisLib
-android.library.reference.2=../PictogramLib
+android.library.reference.1=../PictogramLib
+android.library.reference.2=../AlternativeOasis
