--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -12,4 +12,4 @@ target=Google Inc.:Google APIs:17
 android.library.reference.1=..\\AmbilWarna
 android.library.reference.2=..\\PictogramLib
 android.library.reference.3=..\\AlternativeOasis
-android.library.reference.4=../CategoryLib
+android.library.reference.4=../../../category-lib
