--- a/source/workspace/Cat/project.properties
+++ b/source/workspace/Cat/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-13
-android.library.reference.1=../Ambilwarna
-android.library.reference.2=../CategoryLib
-android.library.reference.3=../AlternativeOasis
-android.library.reference.4=../PictogramLib
+android.library.reference.1=..\\Ambilwarna
+android.library.reference.2=..\\AlternativeOasis
+android.library.reference.3=..\\PictogramLib
+android.library.reference.4=../../../category-lib
