--- a/source/workspace/DeveloperPictoadmin/project.properties
+++ b/source/workspace/DeveloperPictoadmin/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-13
-android.library.reference.1=..\\CategoryLib
-android.library.reference.2=..\\AmbilWarna
-android.library.reference.3=..\\PictogramLib
-android.library.reference.4=../AlternativeOasis
+android.library.reference.1=..\\AmbilWarna
+android.library.reference.2=..\\PictogramLib
+android.library.reference.3=..\\AlternativeOasis
+android.library.reference.4=../../../category-lib
