making stuff work

--- a/category-lib/project.properties
+++ b/category-lib/project.properties
@@ -14,4 +14,4 @@
 target=android-13
 android.library=true
 android.library.reference.1=..\\source\\workspace\\AlternativeOasis
-android.library.reference.2=../source/workspace/PictogramLib
+android.library.reference.2=../../../../Desktop/PictogramLib
