--- a/source/workspace/DeveloperPictoadmin/project.properties
+++ b/source/workspace/DeveloperPictoadmin/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-13
 android.library.reference.1=..\\AmbilWarna
-android.library.reference.2=..\\PictogramLib
-android.library.reference.3=..\\AlternativeOasis
-android.library.reference.4=../../../category-lib
+android.library.reference.2=..\\AlternativeOasis
+android.library.reference.3=..\\..\\..\\category-lib
+android.library.reference.4=../../../../../../Desktop/PictogramLib
