--- a/source/workspace/Cat/project.properties
+++ b/source/workspace/Cat/project.properties
@@ -14,5 +14,5 @@
 target=android-13
 android.library.reference.1=..\\Ambilwarna
 android.library.reference.2=..\\AlternativeOasis
-android.library.reference.3=..\\PictogramLib
-android.library.reference.4=../../../category-lib
+android.library.reference.3=..\\..\\..\\category-lib
+android.library.reference.4=../../../../../../Desktop/PictogramLib
