--- a/source/workspace/PARROT/project.properties
+++ b/source/workspace/PARROT/project.properties
@@ -10,6 +10,6 @@
 # Project target.
 target=Google Inc.:Google APIs:17
 android.library.reference.1=..\\AmbilWarna
-android.library.reference.2=..\\PictogramLib
-android.library.reference.3=..\\AlternativeOasis
-android.library.reference.4=../../../category-lib
+android.library.reference.2=..\\AlternativeOasis
+android.library.reference.3=..\\..\\..\\category-lib
+android.library.reference.4=../../../../../../Desktop/PictogramLib
